Fixed bug that caused long filenames to overflow out of input field in account settings

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -362,6 +362,11 @@ ul {
   color: #F07070;
 }
 
+.filename {
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .calc-button-50 {
   display: flex;
   justify-content: space-between;
